name:                coinbase
version:             0.1.0.0
synopsis:            API for coinbase.com
description:         API for CoinBase
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson 2014
category:            Web, Bitcoin
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Web.CoinBase
  hs-source-dirs: src
  build-depends:       base >=4.7 && <4.8
                     , http-streams
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/coinbase.git
