name:                coinbase
version:             0.1.0.0
synopsis:            API for coinbase.com
description:         API for CoinBase
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson 2014
category:            Web, Bitcoin
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.CoinBase
  other-modules:       Web.CoinBase.Util
                     , Web.CoinBase.Types
                     , Web.CoinBase.Client

  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , http-streams
                     , Decimal
                     , aeson
                     , base16-bytestring
                     , transformers
                     , bytestring
                     , cryptohash
                     , HsOpenSSL
                     , text
                     , time
                     , byteable
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/coinbase.git

Test-Suite tests
    main-is:    Tests.hs
    type:       exitcode-stdio-1.0
    ghc-options:  -Wall
    hs-source-dirs: tests
    build-depends: base
                 , hspec
                 , coinbase
    default-language:  Haskell2010
